--- a/base/templates/base/contact.html
+++ b/base/templates/base/contact.html
@@ -1,4 +1,38 @@
 {% extends 'main.html' %}
+{% block title %}Find Your Dream Job - Comprehensive Job Listings | Contact Us{% endblock %}
+{% block keywords %}{% endblock %}
+{% block canonical %}https://www.careercrest.co.za/contact/{% endblock %}
+
+{% block description %}Find your dream job today with our comprehensive job listing website.
+We offer thousands of job opportunities across multiple industries and locations.
+ Search for jobs by keyword, location, or category and easily apply with just a few clicks.
+Our user-friendly interface and powerful search engine make job hunting easy and convenient.
+ Join our community of job seekers and employers today!{% endblock %}
+
+{% block tcard %}summary_large_image{% endblock %}
+{% block tsite %}@careercrest_sa{% endblock %}
+{% block ttitle %}Find Your Dream Job - Comprehensive Job Listings | Contact Us{% endblock %}
+{% block tdescription %}Find your dream job today with our comprehensive job listing website.
+We offer thousands of job opportunities across multiple industries and locations.
+ Search for jobs by keyword, location, or category and easily apply with just a few clicks.
+Our user-friendly interface and powerful search engine make job hunting easy and convenient.
+ Join our community of job seekers and employers today!{% endblock %}
+{% block tcreator %}@careercrest_sa{% endblock %}
+{% block timage %}https://www.careercrest.co.za/static/img/carousel-1.png{% endblock %}
+
+{% block ogtitle %}Find Your Dream Job - Comprehensive Job Listings | Contact Us{% endblock %}
+{% block ogtype %}article{% endblock %}
+{% block ogurl %}/contact/{% endblock %}
+{% block ogimage %}https://www.careercrest.co.za/static/img/carousel-1.png{% endblock %}
+{% block ogdescription %}Find your dream job today with our comprehensive job listing website.
+We offer thousands of job opportunities across multiple industries and locations.
+ Search for jobs by keyword, location, or category and easily apply with just a few clicks.
+Our user-friendly interface and powerful search engine make job hunting easy and convenient.
+ Join our community of job seekers and employers today!{% endblock %}
+{% block ogsite_name %}CareerCrest{% endblock %}
+
+{% block content %}
+{% load static %}
 
 {% block content %}
 <!-- Header End -->
