--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,6 +1,37 @@
 {% extends 'main.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Find Your Dream Job - Comprehensive Job Listings | Career Crest{% endblock %}
+{% block keywords %}{% endblock %}
+{% block canonical %}{% endblock %}
+
+{% block description %}Find your dream job today with our comprehensive job listing website.
+We offer thousands of job opportunities across multiple industries and locations.
+ Search for jobs by keyword, location, or category and easily apply with just a few clicks.
+Our user-friendly interface and powerful search engine make job hunting easy and convenient.
+ Join our community of job seekers and employers today!{% endblock %}
+
+{% block tcard %}summary_large_image{% endblock %}
+{% block tsite %}@careercrest_sa{% endblock %}
+{% block ttitle %}Find Your Dream Job - Comprehensive Job Listings | Career Crest{% endblock %}
+{% block tdescription %}Find your dream job today with our comprehensive job listing website.
+We offer thousands of job opportunities across multiple industries and locations.
+ Search for jobs by keyword, location, or category and easily apply with just a few clicks.
+Our user-friendly interface and powerful search engine make job hunting easy and convenient.
+ Join our community of job seekers and employers today!{% endblock %}
+{% block tcreator %}@careercrest_sa{% endblock %}
+{% block timage %}https://www.careercrest.co.za/static/img/carousel-1.png{% endblock %}
+
+{% block ogtitle %}Find Your Dream Job - Comprehensive Job Listings | Career Crest{% endblock %}
+{% block ogtype %}article{% endblock %}
+{% block ogurl %}{% endblock %}
+{% block ogimage %}https://www.careercrest.co.za/static/img/carousel-1.png{% endblock %}
+{% block ogdescription %}Find your dream job today with our comprehensive job listing website.
+We offer thousands of job opportunities across multiple industries and locations.
+ Search for jobs by keyword, location, or category and easily apply with just a few clicks.
+Our user-friendly interface and powerful search engine make job hunting easy and convenient.
+ Join our community of job seekers and employers today!{% endblock %}
+{% block ogsite_name %}CareerCrest{% endblock %}
+
 
 {% block content %}
 {% load static %}
@@ -105,33 +136,40 @@
                     if (data.length > 0) {
                         $('.my-list').data('page', currentPage + 1);
                         for (var i = 0; i < data.length; i++) {
-                            $('.my-list').append(
-                                `<div class="job-item p-4 mb-4">
-                                        <div class="row g-4">
-                                            <div class="col-sm-12 col-md-8 d-flex align-items-center">
-                                                <img class="flex-shrink-0 img-fluid border rounded" src="${data[i]['companylogo']}" alt="" style="width: 80px; height: 80px;">
-                                                <div class="text-start ps-4">
-                                                    <a href="${data[i]['theurl']}"><h5 class="mb-3">${data[i]['title']} </h5> </a> 
-                                                    <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>${data[i]['location']}</span>
-                                                    <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>${data[i]['jobType']}</span>
-                                                    <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>${data[i]['salary']} </span>
-                                                </div>
-                                            </div>
-                                            <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
-                                                <div class="d-flex mb-3">
-                                                    <a class="btn btn-primary" href="${data[i]['theurl']}">View More</a>
-                                                </div>
-                                                <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Expires:${data[i]['expiryDate']}</small>
+                            $('.my-list').append(`
+                                <div class="job-item p-4 mb-4">
+                                    <div class="row g-4">
+                                        <div class="col-sm-12 col-md-8 d-flex align-items-center">
+                                            <img class="flex-shrink-0 img-fluid border rounded" src="${data[i]['companylogo'] || '/static/img/android-chrome-512x512.png'}" alt="" style="width: 80px; height: 80px;">
+                                            <div class="text-start ps-4">
+                                                <a href="${data[i]['theurl']}"><h5 class="mb-3">${data[i]['title'] || 'Vacancy'}</h5></a> 
+                                                
+                                                            
+                                                ${data[i]['location'] ? `<span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>${data[i]['location']}</span>` : ''}
+                                                
+                                                ${data[i]['jobType'] ? `<span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>${data[i]['jobType']}</span>` : ''}
+                                                
+                                                ${data[i]['salary'] ? `<span class="text-truncate me-3"><i class="far fa-money-bill-alt text-primary me-2"></i>${data[i]['salary']}</span>` : ''}
+                                                                
                                             </div>
                                         </div>
-                                    </div>`
-
+                                        <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
+                                            <div class="d-flex mb-3">
+                                                <a class="btn btn-primary" href="${data[i]['theurl']}">View More</a>
+                                            </div>
+                                            
+                                            ${data[i]['expiryDate'] ? `<small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Expires:${data[i]['expiryDate']}</small>` : ''}
+                                        </div>
+                                    </div>
+                                </div>`
                             );
+
                             
                         }
                     }
                     if(!response.page.has_next){
                         $('.load-more').hide();
+                        
                     }
                 }
             });
