--- a/base/templates/base/job.html
+++ b/base/templates/base/job.html
@@ -1,5 +1,29 @@
 {% extends 'main.html' %}
 
+{% block title %}{{job.title}}{% endblock %}
+{% block keywords %}{{job.title}}{% endblock %}
+{% block canonical %}{{job.get_absolute_url}}{% endblock %}
+
+{% block description %}{{ job.description|truncatechars:100 }}{% endblock %}
+
+{% block tcard %}summary_large_image{% endblock %}
+{% block tsite %}@careercrest_sa{% endblock %}
+{% block ttitle %}{{job.title}}{% endblock %}
+{% block tdescription %}{{ job.description|truncatechars:100 }}{% endblock %}
+{% block tcreator %}@careercrest_sa{% endblock %}
+{% block timage %}{{job.companylogo}}{% endblock %}
+
+{% block ogtitle %}{{job.title}}{% endblock %}
+{% block ogtype %}article{% endblock %}
+<meta property="article:modified_time" content="{{job.updated}}" />
+{% block ogurl %}{{ job.get_absolute_url }}{% endblock %}
+{% block ogimage %}{{ job.companylogo }}{% endblock %}
+{% block ogdescription %}{{ job.description|truncatechars:100 }}{% endblock %}
+{% block ogsite_name %}CareerCrest{% endblock %}
+
+
+
+
 {% block content %}
  <!-- Header End -->
  <div class="container-xxl py-5 bg-dark page-header mb-5">
@@ -22,12 +46,22 @@
         <div class="row gy-5 gx-4">
             <div class="col-lg-8">
                 <div class="d-flex align-items-center mb-5">
+                    {% if job.companylogo and job.companylogo != 'none' %}
                     <img class="flex-shrink-0 img-fluid border rounded" src="{{job.companylogo}}" alt="" style="width: 80px; height: 80px;">
+                    {% else %}
+                    <img class="flex-shrink-0 img-fluid border rounded" src="/static/img/android-chrome-512x512.png" alt="" style="width: 80px; height: 80px;">
+                    {% endif %}
                     <div class="text-start ps-4">
                         <h3 class="mb-3"> {{job.title}}</h3>
+                        {% if job.location and job.location != 'none' %}
                         <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>{{job.location}}</span>
+                        {% endif %}
+                        {% if jobtype and jobtype != 'none' %}
                         <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>{{jobtype}}</span>
+                        {% endif %}
+                        {% if job.salary and job.salary != 'none' %}
                         <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>{{job.salary}}</span>
+                        {% endif %}
                     </div>
                 </div>
 
@@ -50,14 +84,30 @@
                     <h4 class="mb-4">Job Summary</h4>
                     <p><i class="fa fa-angle-right text-primary me-2"></i>Published: {{job.updated| timesince}} ago</p>
                     <p><i class="fa fa-angle-right text-primary me-2"></i>Vacancy: {{job.title}}</p>
+                    {% if jobtype and jobtype != 'none' %}
                     <p><i class="fa fa-angle-right text-primary me-2"></i>Job Nature: {{jobtype}}</p>
+                    {% endif %}
+
+
+                    {% if job.salary and job.salary != 'none' %}
                     <p><i class="fa fa-angle-right text-primary me-2"></i>Salary: {{job.salary}}</p>
+                    {% endif %}
+
+
+                    {% if job.location and job.location != 'none' %}
                     <p><i class="fa fa-angle-right text-primary me-2"></i>Location: {{job.location}}</p>
+                    {% endif %}
+
+
+                    {% if job.expiryDate and job.expiryDate != 'none' %}
                     <p class="m-0"><i class="fa fa-angle-right text-primary me-2"></i>Expires in: {{job.expiryDate| timeuntil}}</p>
+                    {% endif %}
                 </div>
                 <div class="bg-light rounded p-5 wow slideInUp" data-wow-delay="0.1s">
                     <h4 class="mb-4">Company:</h4>
+                    {% if job.companyname and job.companyname != 'none' %}
                     <p class="m-0">{{job.companyname}}</p>
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -65,3 +115,4 @@
 </div>
 <!-- Job Detail End -->
 {% endblock %}
+
