--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,15 @@
 {% load static %}
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJXVJ9QG2Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZJXVJ9QG2Q');
+</script>
     <meta charset="utf-8">
     <title>CareerCrest - {% block title %}Jobs{% endblock %}</title>
 
