--- a/base/templates/base/job.html
+++ b/base/templates/base/job.html
@@ -49,7 +49,7 @@
                     {% if job.companylogo and job.companylogo != 'none' %}
                     <img class="flex-shrink-0 img-fluid border rounded" src="{{job.companylogo}}" alt="" style="width: 80px; height: 80px;">
                     {% else %}
-                    <img class="flex-shrink-0 img-fluid border rounded" src="/static/img/android-chrome-512x512.png" alt="" style="width: 80px; height: 80px;">
+                    <img class="flex-shrink-0 img-fluid border rounded" src="/media/logo.png" alt="" style="width: 80px; height: 80px;">
                     {% endif %}
                     <div class="text-start ps-4">
                         <h3 class="mb-3"> {{job.title}}</h3>
