I have added google ads and working

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -19,12 +19,12 @@ We offer thousands of job opportunities across multiple industries and locations
 Our user-friendly interface and powerful search engine make job hunting easy and convenient.
  Join our community of job seekers and employers today!{% endblock %}
 {% block tcreator %}@careercrest_sa{% endblock %}
-{% block timage %}https://www.careercrest.co.za/static/img/carousel-1.png{% endblock %}
+{% block timage %}https://www.careercrest.co.za/media/logo.png{% endblock %}
 
 {% block ogtitle %}Find Your Dream Job - Comprehensive Job Listings | Career Crest{% endblock %}
 {% block ogtype %}article{% endblock %}
 {% block ogurl %}{% endblock %}
-{% block ogimage %}https://www.careercrest.co.za/static/img/carousel-1.png{% endblock %}
+{% block ogimage %}https://www.careercrest.co.za/media/logo.png{% endblock %}
 {% block ogdescription %}Find your dream job today with our comprehensive job listing website.
 We offer thousands of job opportunities across multiple industries and locations.
  Search for jobs by keyword, location, or category and easily apply with just a few clicks.
