--- a/templates/main.html
+++ b/templates/main.html
@@ -30,7 +30,7 @@
     <meta name="twitter:title" content="{% block ttitle %}Jobs{% endblock %}">
     <meta name="twitter:description" content="{% block tdescription %}Find your next job here{% endblock %}">
     <meta name="twitter:creator" content="{% block tcreator %}@careercrest_sa{% endblock %}">
-    <meta name="twitter:image" content="{% block timage %}https://www.careercrest.co.za/static/img/carousel-1.png{% endblock %}">
+    <meta name="twitter:image" content="{% block timage %}https://www.careercrest.co.za/media/logo.png{% endblock %}">
     <!-- Twitter card data end -->
 
     <!-- Open Graph data start -->
@@ -38,8 +38,8 @@
     <meta property="og:title" content="{% block ogtitle %}Jobs - Careercrest{% endblock %}" />
     <meta property="og:type" content="{% block ogtype %}website{% endblock %}" />
     <meta property="article:publisher" content="https://www.facebook.com/SAcareercrest" />
-    <meta property="og:url" content="https://www.careercrest.co.za{% block ogurl %}https://careercrest.co.za{% endblock %}" />
-    <meta property="og:image" content="{% block ogimage %}https://www.careercrest.co.za/static/img/carousel-1.png{% endblock %}" />
+    <meta property="og:url" content="https://www.careercrest.co.za{% block ogurl %}{% endblock %}" />
+    <meta property="og:image" content="{% block ogimage %}https://www.careercrest.co.za/media/logo.png{% endblock %}" />
     <meta property="og:description" content="{% block ogdescription %}Find your next job here{% endblock %}" />
     <meta property="og:site_name" content="{% block ogsite_name %}CareerCrest{% endblock %}" />
     <!-- Open Graph data end -->
@@ -220,6 +220,9 @@
 
     <!-- Template Javascript -->
     <script src="{% static 'js/main.js'%}" ></script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4323271819190092"
+     crossorigin="anonymous"></script>
 
 
 </body></html>
