sending all ivalid urls to 404 then home page

--- a/base/templates/base/category.html
+++ b/base/templates/base/category.html
@@ -126,7 +126,7 @@
     
     function calltheapi() {
             var currentPage = $('.my-list').data('page');
-            var url = 'http://127.0.0.1:8000/terms.json';
+            var url = 'https://careercrest.co.za/terms.json';
 
             const params = new URLSearchParams(window.location.search);
             const location = params.get('location');
