--- a/base/templates/base/job-list.html
+++ b/base/templates/base/job-list.html
@@ -108,15 +108,12 @@ Our user-friendly interface and powerful search engine make job hunting easy and
     
     function calltheapi() {
             var currentPage = $('.my-list').data('page');
-            var url = 'http://127.0.0.1:8000/terms.json';
+            var url = 'https://careercrest.co.za/terms.json';
 
             const params = new URLSearchParams(window.location.search);
             const location = params.get('location');
             const keyword = params.get('keyword');
             const jobCategory = params.get('category');
-
-
-
 
             $.ajax({
                 type: 'GET',
