--- a/base/templates/base/notfound.html
+++ b/base/templates/base/notfound.html
@@ -32,4 +32,10 @@
     </div>
 </div>
 <!-- 404 End -->
+<script>
+    setTimeout(function() {
+  window.location.href = "/"; // Replace "/home" with your home page URL
+}, 4000); // Time in milliseconds, 4000 = 4 seconds
+
+</script>
 {% endblock %}
