--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -117,7 +117,7 @@ Our user-friendly interface and powerful search engine make job hunting easy and
     
     function calltheapi() {
             var currentPage = $('.my-list').data('page');
-            var url = 'http://127.0.0.1:8000/terms.json';
+            var url = 'https://careercrest.co.za/terms.json';
 
             const params = new URLSearchParams(window.location.search);
             const location = params.get('location');
