--- a/static/css/style.css
+++ b/static/css/style.css
@@ -438,3 +438,14 @@
     padding-right: 0;
     border-right: none;
 }
+
+/* blog */
+article img{
+    max-width: 100% !important;
+    height: auto !important;
+    border-radius: .25rem!important;
+}
+
+.featured-image-list{
+    object-fit: cover;
+} 
