--- a/resume/templates/resume/resume_basic.html
+++ b/resume/templates/resume/resume_basic.html
@@ -1,10 +1,132 @@
-<h3>Create Resume</h3>
-<div class="container">
-    <h2>Basic Information</h2>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>CV Builder</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+		<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://jsuites.net/v4/jsuites.js"></script>
+		<link rel="stylesheet" href="https://jsuites.net/v4/jsuites.css" type="text/css" />
+		<style type="text/css">
+
+            .containerxx {
+            display: flex;
+            flex-direction: row;
+            }
+
+
+			.question {
+				width: 100%;
+				height: 100%;
+				border-radius: 10px;
+				padding: 50px;
+				text-align: center;
+				position: relative;
+				display: none;
+			}
+
+			.visible {
+				display: block;
+			}
+
+			.q-input,
+			.move {
+				margin: 10px;
+				border: none;
+				padding: 10px;
+			}
+
+			.move {
+				display: flex;
+				justify-content: space-between;
+			}
+
+			.move button {
+				padding: 5px;
+				font-size: 16px;
+				width: 60px;
+				border-radius: 5px;
+				border: none;
+				cursor: pointer;
+				transition: 0.4s;
+			}
+
+			.move button:hover {
+				box-shadow: -2px -2px 20px #fff;
+			}
+
+			.move button:focus {
+				outline: none;
+			}
+
+			/* Default styles for labels and inputs */
+			label,
+			input {
+				display: block;
+				margin-bottom: 10px;
+			}
+
+			/* Styles for mobile devices */
+			@media only screen and (max-width: 600px) {
+				input {
+					display: block;
+				}
+
+				label {
+					display: none;
+				}
+
+				input::placeholder {
+					font-size: 1.2em;
+				}
+			}
+
+			/* Styles for larger screens */
+			@media only screen and (min-width: 601px) {
+				input {
+					display: inline-block;
+					width: 50%;
+					margin-right: 10px;
+				}
+
+				label {
+					display: inline-block;
+					width: 40%;
+					margin-right: 10px;
+				}
+			}
+		</style>
+	</head>
+<body >
+    <div class="container">
+
     <form method="post">
         {% csrf_token %}
-        <input type="text" name="title" value="{{resume.title}}">
-        <input type="text" name="professional_summary" value="{{resume.professional_summary}}">
-        <button type="submit" class="btn btn-primary">Next</button>
+                <div class="row">
+                    <div class="form-group">
+                        {{ form.title.label_tag }}
+                        {{ form.title }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group">
+                        {{ form.professional_summary.label_tag }}
+                        {{ form.professional_summary }}
+                    </div>
+                    
+                </div>
+        <button type="submit">Submit</button>
     </form>
-</div>
+    </div>
+</body>
+</html>
+
