basic work education working

--- a/resume/templates/resume/add_edit_edu.html
+++ b/resume/templates/resume/add_edit_edu.html
@@ -3,4 +3,4 @@
     {{form.as_p}}
     <button type="submit">Save</button>
 </form>
-<a href="{% url 'list-work' tracking %}"> Cancel</a>
+<a href="{% url 'list-edu' tracking %}"> Cancel</a>
