--- a/resume/templates/resume/resume_basic.html
+++ b/resume/templates/resume/resume_basic.html
@@ -124,7 +124,7 @@
                     </div>
                     
                 </div>
-        <button type="submit">Submit</button>
+        <button type="submit">Save And Next</button>
     </form>
     </div>
 </body>
