--- a/resume/templates/resume/resume_workList.html
+++ b/resume/templates/resume/resume_workList.html
@@ -9,3 +9,6 @@
 {% endfor %}
 
 <a href="{% url 'addeditwork' tracking newone  %}"> Add new one</a>
+
+<a href="{% url 'create-basic' tracking %}"> Back</a>
+<a href="{% url 'list-edu' tracking %}"> Next</a>
